fix: tag input not visible

--- a/src/tiddlywiki-ui/popup/CreateNewTiddlerPopup.css
+++ b/src/tiddlywiki-ui/popup/CreateNewTiddlerPopup.css
@@ -18,9 +18,11 @@
 .tw-calendar-layout-create-new-tiddler-popup .tw-calendar-tags-input {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   max-width: 100%;
   overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
 }
 .tw-calendar-layout-create-new-tiddler-popup .tw-calendar-tags-input .tw-calendar-frequently-used-tags {
   max-width: 180%;
